[package]
name = "csearch"
version = "0.1.0"
authors = [ "Adam Lesinski <adamlesinski@gmail.com>", "Vardhan M <exacube@gmail.com>" ]
edition = "2021"

[dependencies]
anyhow = "1.0.69"
clap = { version = "4.1.4", features = ["derive"] }
glob = "0.3.1"
unicode-segmentation = "1.10.1"

[dev-dependencies]
assert_unordered = "0.3.5"
maplit = "1.0.2"
